<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_red_light"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="60dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvApplicationName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/view"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:background="@color/white" />

        <TextView
            android:id="@+id/tvMainDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:maxLines="1"
            android:text="@string/main_description"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvSubDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/sub_description"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:id="@+id/guidLine"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="@id/llTop" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cvForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toBottomOf="@id/guidLine"
        app:strokeColor="@color/white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="30dp">

            <TextView
                android:id="@+id/tvFormTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/form_title"
                android:textColor="@color/color_primary"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/first_name"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edtFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_first_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/last_name"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edtLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_last_name"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/contact_number"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edtContactNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_contact_number"
                android:inputType="number"
                android:maxLines="1"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/email"
                android:textColor="@color/black"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:textColor="@color/black" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_btn_submit"
        android:text="@string/form_submit"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/progressDialog"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="10dp"
        android:indeterminateTint="@color/black"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
