<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="30dp"
    android:paddingVertical="20dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/thank_you"
        android:textAlignment="center"
        android:textColor="@color/color_primary"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dialogDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle"
        tools:text="@string/thank_you_response" />

    <Button
        android:id="@+id/btnOk"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/ok"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />
</androidx.appcompat.widget.LinearLayoutCompat>
